example-ingress/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dummy.dagandersen.com
    http:
      paths:
      - path: /hello
        pathType: Prefix  
        backend:
          service:
            name: hello-web
            port:
              number: 8080
